--- a/public/pages/header.html
+++ b/public/pages/header.html
@@ -22,16 +22,16 @@
                     <div class="general_page">
                         <li class="nav-item">
                             <a class="nav-link" href="general" data-menu="general"
-                               data-link="ajax" <?php print ($pageMenu == 'general')?>>General page</a>
+                               data-link="ajax" <?php print ($pageMenu == 'general') ? ' class="active"' : '' ?>>General page</a>
                         </li>
                     </div>
                     <li class="nav-item" id="#registration_page">
                         <a class="nav-link" href="registration" data-menu="registration"
-                           data-link="ajax" <?php print ($pageMenu == 'registration')?>>Registration</a>
+                           data-link="ajax" <?php print ($pageMenu == 'registration') ? ' class="active"' : '' ?>>Registration</a>
                     </li>
                     <li class="nav-item" id="#login_page">
                         <a class="nav-link" href="login" data-menu="login" id="login-page"
-                           data-link="ajax" <?php print ($pageMenu == 'login')?>>Login</a>
+                           data-link="ajax" <?php print ($pageMenu == 'login') ? ' class="active"' : '' ?>>Login</a>
                     </li>
                 </ul>
             </div>
